--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "patients",
-  "version": "0.0.0",
+  "name": "jakesplace",
+  "version": "1.0.0",
+  "description": "Project 1 GA",
   "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sspnyc/pr1.git"
+  },
   "author": "Simmy",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/sspnyc/pr1/issues"
+  },
+  "homepage": "https://github.com/sspnyc/pr1#readme",
   "dependencies": {
-    "body-parser": "^1.12.2",
-    "express": "^4.12.3",
-    "marked": "^0.3.3",
-    "method-override": "^2.3.2",
-    "morgan": "^1.5.2",
-    "mustache": "^2.0.0",
-    "sqlite3": "^3.0.5"
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3",
+    "fs": "0.0.2",
+    "marked": "^0.3.5",
+    "method-override": "^2.3.5",
+    "morgan": "^1.6.1",
+    "mustache": "^2.2.0",
+    "request": "^2.65.0",
+    "sqlite3": "^3.1.1"
   }
 }
